Promo 2018-2021/2A/S4/projet/trad/code/src/com/company/projetParser.java
// $ANTLR 3.5.2 .\\src\\com\\company\\projet.g 2020-01-20 16:56:51
package com.company;

import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class projetParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARGLIST", "BLOC", "BOOLEEN", 
		"COMMENT", "CSTE_BOOLEEN", "CSTE_ENT", "CSTE_STR", "EMPTY", "ESC_SEQ", 
		"FUNCDECL", "FUNCDECLISTE", "HEX_DIGIT", "ID", "IDF", "IF_COND", "IF_ELSE", 
		"IF_THEN", "INSTR_AFFECT", "INSTR_FUNC_APPEL", "INSTR_IF", "INSTR_READ", 
		"INSTR_RETURN", "INSTR_WHILE", "INSTR_WRITE", "INT", "NEWLINE", "OCTAL_ESC", 
		"RANGE", "RANGELIST", "REFARG", "ROOT", "STRING", "TAB_ACCESS", "UNICODE_ESC", 
		"VALARG", "VARDECL", "VARDECLISTE", "WHILE_COND", "WHILE_DO", "WS", "'!='", 
		"'('", "')'", "'*'", "'+'", "','", "'-'", "'..'", "'/'", "':'", "';'", 
		"'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'^'", "'and'", 
		"'array'", "'bool'", "'do'", "'else'", "'function'", "'if'", "'int'", 
		"'not'", "'of'", "'or'", "'program'", "'read'", "'ref'", "'return'", "'then'", 
		"'var'", "'void'", "'while'", "'write'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int ARGLIST=4;
	public static final int BLOC=5;
	public static final int BOOLEEN=6;
	public static final int COMMENT=7;
	public static final int CSTE_BOOLEEN=8;
	public static final int CSTE_ENT=9;
	public static final int CSTE_STR=10;
	public static final int EMPTY=11;
	public static final int ESC_SEQ=12;
	public static final int FUNCDECL=13;
	public static final int FUNCDECLISTE=14;
	public static final int HEX_DIGIT=15;
	public static final int ID=16;
	public static final int IDF=17;
	public static final int IF_COND=18;
	public static final int IF_ELSE=19;
	public static final int IF_THEN=20;
	public static final int INSTR_AFFECT=21;
	public static final int INSTR_FUNC_APPEL=22;
	public static final int INSTR_IF=23;
	public static final int INSTR_READ=24;
	public static final int INSTR_RETURN=25;
	public static final int INSTR_WHILE=26;
	public static final int INSTR_WRITE=27;
	public static final int INT=28;
	public static final int NEWLINE=29;
	public static final int OCTAL_ESC=30;
	public static final int RANGE=31;
	public static final int RANGELIST=32;
	public static final int REFARG=33;
	public static final int ROOT=34;
	public static final int STRING=35;
	public static final int TAB_ACCESS=36;
	public static final int UNICODE_ESC=37;
	public static final int VALARG=38;
	public static final int VARDECL=39;
	public static final int VARDECLISTE=40;
	public static final int WHILE_COND=41;
	public static final int WHILE_DO=42;
	public static final int WS=43;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public projetParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public projetParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return projetParser.tokenNames; }
	@Override public String getGrammarFileName() { return ".\\src\\com\\company\\projet.g"; }


	/** Map variable name to Integer object holding value */
	HashMap<String,Integer>  memory = new HashMap<String,Integer>();


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// .\\src\\com\\company\\projet.g:49:1: program : 'program' ID vardeclist fundeclist instr -> ^( ID vardeclist fundeclist instr ) ;
	public final projetParser.program_return program() throws RecognitionException {
		projetParser.program_return retval = new projetParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal1=null;
		Token ID2=null;
		ParserRuleReturnScope vardeclist3 =null;
		ParserRuleReturnScope fundeclist4 =null;
		ParserRuleReturnScope instr5 =null;

		Object string_literal1_tree=null;
		Object ID2_tree=null;
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_75=new RewriteRuleTokenStream(adaptor,"token 75");
		RewriteRuleSubtreeStream stream_vardeclist=new RewriteRuleSubtreeStream(adaptor,"rule vardeclist");
		RewriteRuleSubtreeStream stream_instr=new RewriteRuleSubtreeStream(adaptor,"rule instr");
		RewriteRuleSubtreeStream stream_fundeclist=new RewriteRuleSubtreeStream(adaptor,"rule fundeclist");

		try {
			// .\\src\\com\\company\\projet.g:49:9: ( 'program' ID vardeclist fundeclist instr -> ^( ID vardeclist fundeclist instr ) )
			// .\\src\\com\\company\\projet.g:49:11: 'program' ID vardeclist fundeclist instr
			{
			string_literal1=(Token)match(input,75,FOLLOW_75_in_program162);  
			stream_75.add(string_literal1);

			ID2=(Token)match(input,ID,FOLLOW_ID_in_program164);  
			stream_ID.add(ID2);

			pushFollow(FOLLOW_vardeclist_in_program166);
			vardeclist3=vardeclist();
			state._fsp--;

			stream_vardeclist.add(vardeclist3.getTree());
			pushFollow(FOLLOW_fundeclist_in_program168);
			fundeclist4=fundeclist();
			state._fsp--;

			stream_fundeclist.add(fundeclist4.getTree());
			pushFollow(FOLLOW_instr_in_program170);
			instr5=instr();
			state._fsp--;

			stream_instr.add(instr5.getTree());
			// AST REWRITE
			// elements: vardeclist, fundeclist, ID, instr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 49:52: -> ^( ID vardeclist fundeclist instr )
			{
				// .\\src\\com\\company\\projet.g:49:55: ^( ID vardeclist fundeclist instr )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_ID.nextNode(), root_1);
				adaptor.addChild(root_1, stream_vardeclist.nextTree());
				adaptor.addChild(root_1, stream_fundeclist.nextTree());
				adaptor.addChild(root_1, stream_instr.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class vardeclist_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "vardeclist"
	// .\\src\\com\\company\\projet.g:51:1: vardeclist : ( vardecl )* -> ^( VARDECLISTE ( vardecl )* ) ;
	public final projetParser.vardeclist_return vardeclist() throws RecognitionException {
		projetParser.vardeclist_return retval = new projetParser.vardeclist_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope vardecl6 =null;

		RewriteRuleSubtreeStream stream_vardecl=new RewriteRuleSubtreeStream(adaptor,"rule vardecl");

		try {
			// .\\src\\com\\company\\projet.g:52:2: ( ( vardecl )* -> ^( VARDECLISTE ( vardecl )* ) )
			// .\\src\\com\\company\\projet.g:52:4: ( vardecl )*
			{
			// .\\src\\com\\company\\projet.g:52:4: ( vardecl )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==80) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// .\\src\\com\\company\\projet.g:52:5: vardecl
					{
					pushFollow(FOLLOW_vardecl_in_vardeclist193);
					vardecl6=vardecl();
					state._fsp--;

					stream_vardecl.add(vardecl6.getTree());
					}
					break;

				default :
					break loop1;
				}
			}

			// AST REWRITE
			// elements: vardecl
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 52:15: -> ^( VARDECLISTE ( vardecl )* )
			{
				// .\\src\\com\\company\\projet.g:52:18: ^( VARDECLISTE ( vardecl )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VARDECLISTE, "VARDECLISTE"), root_1);
				// .\\src\\com\\company\\projet.g:52:32: ( vardecl )*
				while ( stream_vardecl.hasNext() ) {
					adaptor.addChild(root_1, stream_vardecl.nextTree());
				}
				stream_vardecl.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "vardeclist"


	public static class vardecl_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "vardecl"
	// .\\src\\com\\company\\projet.g:53:1: vardecl : 'var' identlist ':' typename ';' -> ^( VARDECL typename identlist ) ;
	public final projetParser.vardecl_return vardecl() throws RecognitionException {
		projetParser.vardecl_return retval = new projetParser.vardecl_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal7=null;
		Token char_literal9=null;
		Token char_literal11=null;
		ParserRuleReturnScope identlist8 =null;
		ParserRuleReturnScope typename10 =null;

		Object string_literal7_tree=null;
		Object char_literal9_tree=null;
		Object char_literal11_tree=null;
		RewriteRuleTokenStream stream_80=new RewriteRuleTokenStream(adaptor,"token 80");
		RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
		RewriteRuleTokenStream stream_54=new RewriteRuleTokenStream(adaptor,"token 54");
		RewriteRuleSubtreeStream stream_identlist=new RewriteRuleSubtreeStream(adaptor,"rule identlist");
		RewriteRuleSubtreeStream stream_typename=new RewriteRuleSubtreeStream(adaptor,"rule typename");

		try {
			// .\\src\\com\\company\\projet.g:54:2: ( 'var' identlist ':' typename ';' -> ^( VARDECL typename identlist ) )
			// .\\src\\com\\company\\projet.g:54:4: 'var' identlist ':' typename ';'
			{
			string_literal7=(Token)match(input,80,FOLLOW_80_in_vardecl212);  
			stream_80.add(string_literal7);

			pushFollow(FOLLOW_identlist_in_vardecl214);
			identlist8=identlist();
			state._fsp--;

			stream_identlist.add(identlist8.getTree());
			char_literal9=(Token)match(input,53,FOLLOW_53_in_vardecl216);  
			stream_53.add(char_literal9);

			pushFollow(FOLLOW_typename_in_vardecl218);
			typename10=typename();
			state._fsp--;

			stream_typename.add(typename10.getTree());
			char_literal11=(Token)match(input,54,FOLLOW_54_in_vardecl220);  
			stream_54.add(char_literal11);

			// AST REWRITE
			// elements: identlist, typename
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 54:37: -> ^( VARDECL typename identlist )
			{
				// .\\src\\com\\company\\projet.g:54:40: ^( VARDECL typename identlist )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VARDECL, "VARDECL"), root_1);
				adaptor.addChild(root_1, stream_typename.nextTree());
				adaptor.addChild(root_1, stream_identlist.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "vardecl"


	public static class identlist_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "identlist"
	// .\\src\\com\\company\\projet.g:55:1: identlist : ID identlist2 ;
	public final projetParser.identlist_return identlist() throws RecognitionException {
		projetParser.identlist_return retval = new projetParser.identlist_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ID12=null;
		ParserRuleReturnScope identlist213 =null;

		Object ID12_tree=null;

		try {
			// .\\src\\com\\company\\projet.g:56:2: ( ID identlist2 )
			// .\\src\\com\\company\\projet.g:56:4: ID identlist2
			{
			root_0 = (Object)adaptor.nil();


			ID12=(Token)match(input,ID,FOLLOW_ID_in_identlist238); 
			ID12_tree = (Object)adaptor.create(ID12);
			adaptor.addChild(root_0, ID12_tree);

			pushFollow(FOLLOW_identlist2_in_identlist240);
			identlist213=identlist2();
			state._fsp--;

			adaptor.addChild(root_0, identlist213.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "identlist"


	public static class identlist2_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "identlist2"
	// .\\src\\com\\company\\projet.g:57:1: identlist2 : (| ',' ! identlist );
	public final projetParser.identlist2_return identlist2() throws RecognitionException {
		projetParser.identlist2_return retval = new projetParser.identlist2_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal14=null;
		ParserRuleReturnScope identlist15 =null;

		Object char_literal14_tree=null;

		try {
			// .\\src\\com\\company\\projet.g:58:2: (| ',' ! identlist )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==53) ) {
				alt2=1;
			}
			else if ( (LA2_0==49) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// .\\src\\com\\company\\projet.g:59:2: 
					{
					root_0 = (Object)adaptor.nil();


					}
					break;
				case 2 :
					// .\\src\\com\\company\\projet.g:59:4: ',' ! identlist
					{
					root_0 = (Object)adaptor.nil();


					char_literal14=(Token)match(input,49,FOLLOW_49_in_identlist2251); 
					pushFollow(FOLLOW_identlist_in_identlist2254);
					identlist15=identlist();
					state._fsp--;

					adaptor.addChild(root_0, identlist15.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "identlist2"


	public static class typename_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "typename"
	// .\\src\\com\\company\\projet.g:60:1: typename : ( atomtype | arraytype );
	public final projetParser.typename_return typename() throws RecognitionException {
		projetParser.typename_return retval = new projetParser.typename_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope atomtype16 =null;
		ParserRuleReturnScope arraytype17 =null;


		try {
			// .\\src\\com\\company\\projet.g:60:9: ( atomtype | arraytype )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==66||LA3_0==71||LA3_0==81) ) {
				alt3=1;
			}
			else if ( (LA3_0==65) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// .\\src\\com\\company\\projet.g:60:11: atomtype
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_atomtype_in_typename260);
					atomtype16=atomtype();
					state._fsp--;

					adaptor.addChild(root_0, atomtype16.getTree());

					}
					break;
				case 2 :
					// .\\src\\com\\company\\projet.g:61:4: arraytype
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_arraytype_in_typename265);
					arraytype17=arraytype();
					state._fsp--;

					adaptor.addChild(root_0, arraytype17.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "typename"


	public static class atomtype_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "atomtype"
	// .\\src\\com\\company\\projet.g:63:1: atomtype : ( 'void' | 'bool' | 'int' );
	public final projetParser.atomtype_return atomtype() throws RecognitionException {
		projetParser.atomtype_return retval = new projetParser.atomtype_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set18=null;

		Object set18_tree=null;

		try {
			// .\\src\\com\\company\\projet.g:63:9: ( 'void' | 'bool' | 'int' )
			// .\\src\\com\\company\\projet.g:
			{
			root_0 = (Object)adaptor.nil();


			set18=input.LT(1);
			if ( input.LA(1)==66||input.LA(1)==71||input.LA(1)==81 ) {
				input.consume();
				adaptor.addChild(root_0, (Object)adaptor.create(set18));
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "atomtype"


	public static class arraytype_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "arraytype"
	// .\\src\\com\\company\\projet.g:67:1: arraytype : 'array' '[' rangelist ']' 'of' atomtype -> ^( 'array' atomtype rangelist ) ;
	public final projetParser.arraytype_return arraytype() throws RecognitionException {
		projetParser.arraytype_return retval = new projetParser.arraytype_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal19=null;
		Token char_literal20=null;
		Token char_literal22=null;
		Token string_literal23=null;
		ParserRuleReturnScope rangelist21 =null;
		ParserRuleReturnScope atomtype24 =null;

		Object string_literal19_tree=null;
		Object char_literal20_tree=null;
		Object char_literal22_tree=null;
		Object string_literal23_tree=null;
		RewriteRuleTokenStream stream_61=new RewriteRuleTokenStream(adaptor,"token 61");
		RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");
		RewriteRuleTokenStream stream_73=new RewriteRuleTokenStream(adaptor,"token 73");
		RewriteRuleTokenStream stream_65=new RewriteRuleTokenStream(adaptor,"token 65");
		RewriteRuleSubtreeStream stream_rangelist=new RewriteRuleSubtreeStream(adaptor,"rule rangelist");
		RewriteRuleSubtreeStream stream_atomtype=new RewriteRuleSubtreeStream(adaptor,"rule atomtype");

		try {
			// .\\src\\com\\company\\projet.g:68:2: ( 'array' '[' rangelist ']' 'of' atomtype -> ^( 'array' atomtype rangelist ) )
			// .\\src\\com\\company\\projet.g:68:4: 'array' '[' rangelist ']' 'of' atomtype
			{
			string_literal19=(Token)match(input,65,FOLLOW_65_in_arraytype291);  
			stream_65.add(string_literal19);

			char_literal20=(Token)match(input,61,FOLLOW_61_in_arraytype293);  
			stream_61.add(char_literal20);

			pushFollow(FOLLOW_rangelist_in_arraytype295);
			rangelist21=rangelist();
			state._fsp--;

			stream_rangelist.add(rangelist21.getTree());
			char_literal22=(Token)match(input,62,FOLLOW_62_in_arraytype297);  
			stream_62.add(char_literal22);

			string_literal23=(Token)match(input,73,FOLLOW_73_in_arraytype299);  
			stream_73.add(string_literal23);

			pushFollow(FOLLOW_atomtype_in_arraytype301);
			atomtype24=atomtype();
			state._fsp--;

			stream_atomtype.add(atomtype24.getTree());
			// AST REWRITE
			// elements: rangelist, atomtype, 65
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 68:44: -> ^( 'array' atomtype rangelist )
			{
				// .\\src\\com\\company\\projet.g:68:47: ^( 'array' atomtype rangelist )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_65.nextNode(), root_1);
				adaptor.addChild(root_1, stream_atomtype.nextTree());
				adaptor.addChild(root_1, stream_rangelist.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "arraytype"


	public static class rangelist_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};

